# SCPRoomGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  testdata.txt
inc/: generator.h  testdata.h
src/: generator.cpp  main.cpp  test.cpp
testdata/: mapdump_DONTBLINK.json  mapdump_JORGE.json  mapdump_MyMap.json  mapdump_d9341.json  mapdump_dirtymetal.json
